# indicorp

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  package-lock.json  pyproject.toml  tmuxp.yaml
etc/: indico.conf
src/: setup.py
src/indicorp/: __init__.py  plugin.py
