[tool.poetry]
name = "indicorp"
version = "0.1.0"
description = "An Indico distribution"
repository = "https://github.com/unconventionaldotdev/indicorp"
readme = "README.md"
license = "MIT"
authors = [
    "Alejandro Avilés <ome@unconventional.dev>"
]
packages = [
    {include = "indicorp", from = "src"}
]

[tool.poetry.dependencies]
python = "<3.13,>=3.12.2"

[tool.poetry.group.dev.dependencies]
indico = { path = "indico", develop = true, extras = ["dev"] }

[tool.poetry.plugins."indico.plugins"]
"indicorp" = "indicorp.plugin:Distro"

[tool.virtualenvs]
create = true
in-project = true
prefer-active-python = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
