[project]
name = "indicorp"
version = "0.1.0"
description = "An Indico distribution"
readme = "README.md"
license = "MIT"
authors = [{ name = "Alejandro Avilés", email = "ome@unconventional.dev" }]
requires-python = '>=3.12.2'
dependencies = []

[project.urls]
Repository = "https://github.com/unconventionaldotdev/indicorp"

[project.entry-points."indico.plugins"]
indicorp = "indicorp.plugin:Distro"

[tool.hatch]
version = { path = 'src/indicorp/__init__.py' }

[tool.hatch.build]
packages = ["src/indicorp"]

[tool.uv.sources]
indico = { path = "indico", editable = true }

[dependency-groups]
dev = [
  "indico[dev]"
]

[build-system]
requires = ['hatchling==1.27.0']
build-backend = 'hatchling.build'
