[project]
name = "indicorp"
dynamic = ["version"]
description = "An Indico distribution"
readme = "README.md"
license = "MIT"
authors = [{ name = "Alejandro Avilés", email = "ome@unconventional.dev" }]
requires-python = '>=3.12.2'
dependencies = []

[project.urls]
Repository = "https://github.com/unconventionaldotdev/indicorp"

[project.entry-points."indico.plugins"]
indicorp = "indicorp.plugin:Distro"

[tool.hatch]
version = { path = 'src/indicorp/__init__.py' }

[tool.hatch.build.targets.wheel]
packages = ["src/indicorp"]

[tool.uv]
# XXX: Make uv refresh metadata of editable packages
reinstall-package = [
    "indicorp",
    "indico",
    "indico-plugin-vc-zoom"
]

[tool.uv.sources]
indico = { path = "indico", editable = true }
indico-plugin-vc-zoom = { path = "plugins/indico-plugins/vc_zoom", editable = true }

[dependency-groups]
dev = [
  "indico[dev]",
  "indico-plugin-vc-zoom"
]

[build-system]
requires = ['hatchling==1.27.0']
build-backend = 'hatchling.build'
